--- a/website/templates/welcome.html
+++ b/website/templates/welcome.html
@@ -362,7 +362,7 @@
                 <div class="form-group">
                     <label for="itemType">What was Lost or Found <span class="required">*</span></label>
                     <p class="help-text">(Dog, Jacket, Smartphone, Wallet, etc.) This field may auto-populate</p>
-                    <input type="text" id="itemType" name="itemType" class="form-control" placeholder="Bag" required>
+                    <input type="text" id="itemType" name="itemType" class="form-control" placeholder="e.g., Bag With Formal Shirt, Scarf And Gloves" required>
                 </div>
 
                 <div class="form-group">
