--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -5,12 +5,17 @@
     text-align: center;
     padding: 3rem 0 2rem;
     margin-top: 4rem;
-    width: 100%;
+    width: 100vw;
     position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
     box-sizing: border-box;
 ">
     <div style="
-        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
         padding: 0 20px;
     ">
         <!-- Footer Content Grid -->
