new woking code.

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -475,7 +475,7 @@
         <div class="container">
             <nav>
                 <div class="wa-header__logo">
-        <img src="static/assets/foundit.png" alt="Logo" class="logo">
+        <img src="/static/assets/foundit.png" alt="Logo" class="logo">
     </div>
              
                 <a href="#" class="logo">FoundiT</a>
@@ -492,7 +492,7 @@
                     
                     <!-- Notification Button -->
                     <button class="notification-btn" onclick="toggleChatbox()">
-                        <img src="static/assets/bot.png" alt="chatbot" class="notification-icon">
+                        <img src="/static/assets/bot.png" alt="chatbot" class="notification-icon">
                         <span class="notification-badge">?</span>
                     </button>
                 </div>
