Signup/login working

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -482,8 +482,8 @@
                    
                 <ul class="nav-links">
                     <li><a href="/welcome">Home</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
+                    <li><a href="#features">Lost Items</a></li>
+                    <li><a href="#how-it-works">Found Items</a></li>
                     <li><a href="contact">Contact</a></li>
                 </ul>
 
