--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -619,7 +619,7 @@
                             <input type="tel" id="phone" name="phone" placeholder="+94 XX XXX XXXX">
                             <div class="error-message" id="phoneError">Please enter a valid phone number</div>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="userType">User Type <span class="required">*</span></label>
                             <select id="userType" name="userType" required>
                                 <option value="">Select your role</option>
@@ -632,7 +632,7 @@
                             </select>
                             <div class="error-message" id="userTypeError">Please select your user type</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="form-section">
